[package]
name = "facilitator-enterprise"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "facilitator-enterprise"
path = "src/main.rs"

[features]
default = ["chain-eip155", "chain-solana"]
chain-eip155 = ["dep:x402-chain-eip155"]
chain-solana = ["dep:x402-chain-solana"]
chain-aptos = ["dep:x402-chain-aptos"]
full = ["chain-eip155", "chain-solana", "chain-aptos"]

[dependencies]
x402-types = { workspace = true, features = ["cli"] }
x402-facilitator-local = { workspace = true }
x402-chain-eip155 = { workspace = true, features = ["facilitator"], optional = true }
x402-chain-solana = { workspace = true, features = ["facilitator"], optional = true }
x402-chain-aptos = { workspace = true, features = ["facilitator"], optional = true }

axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }

# Enterprise dependencies
config = "0.15"
toml = "0.8"
dashmap = "6.1"
ipnetwork = "0.20"
alloy = { version = "1.6", features = ["dyn-abi", "providers", "rpc-types", "sol-types"] }
alloy-primitives = { workspace = true }
alloy-sol-types = { version = "1.4" }
thiserror = { workspace = true }
